# llm-cerebroscope

./: .gitignore  LICENSE  README.md  pyproject.toml
cerebro/: cli.py  graph.py  gui.py  ingester.py  validator.py  vector_store.py
cerebro/ui/: formatter.py
cerebroscope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
